--- a/index.html
+++ b/index.html
@@ -26,6 +26,15 @@
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
     <link rel="stylesheet" href="./responsive.css">
+
+    <!-- meta -->
+    <meta name="title" content="AMJ ">
+    <meta name="author" content="AMJ">
+    <meta name="description" content="AMJ CÙNG BẠN LÀM CHỦ TƯƠNG LAI">
+
+    <meta property="og:image" content="./assets/images/intro-text.png">
+    <meta property="og:title" content="AMJ">
+    <meta property="og:description" content="AMJ CÙNG BẠN LÀM CHỦ TƯƠNG LAI">
 </head>
 
 <body>
