update meta tag and favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type="image/x-icon" href="./assets/images/logo.png">
     <title>AMJ</title>
     <!-- fontawesome -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
@@ -32,7 +33,7 @@
     <meta name="author" content="AMJ">
     <meta name="description" content="AMJ CÙNG BẠN LÀM CHỦ TƯƠNG LAI">
 
-    <meta property="og:image" content="./assets/images/intro-text.png">
+    <meta property="og:image" content="./assets/images/logo.png">
     <meta property="og:title" content="AMJ">
     <meta property="og:description" content="AMJ CÙNG BẠN LÀM CHỦ TƯƠNG LAI">
 </head>
