--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
         crossorigin="anonymous" referrerpolicy="no-referrer" />
 
-    <!-- font -->
+    <!-- BT JS -->
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js"
         integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
         crossorigin="anonymous"></script>
@@ -23,6 +23,12 @@
         integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
         crossorigin="anonymous"></script>
 
+
+    <!-- font -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
+        rel="stylesheet">
 
     <link rel="stylesheet" href="./bootstrap.min.css">
     <link rel="stylesheet" href="./style.css">
@@ -325,12 +331,6 @@
                 </div>
                 <div class="col-md-6 col-12">
                     <div class="service-slider">
-
-                        <a class="service-slider-btn-next" href="#carouselExampleControls2" role="button"
-                            data-slide="next">
-                            <i class="fa-solid fa-arrow-right"></i>
-                        </a>
-
                         <div id="carouselExampleControls2" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
@@ -404,6 +404,18 @@
                                         </div>
                                     </div>
                                 </div>
+                                <a class="carousel-control-prev" href="#carouselExampleControls2" role="button"
+                                    data-slide="prev">
+                                    <div class="wrapper-icon">
+                                        <i class="fa-solid fa-arrow-left"></i>
+                                    </div>
+                                </a>
+                                <a class="carousel-control-next" href="#carouselExampleControls2" role="button"
+                                    data-slide="next">
+                                    <div class="wrapper-icon">
+                                        <i class="fa-solid fa-arrow-right"></i>
+                                    </div>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -424,6 +436,40 @@
         </div>
         <div class="vision-main-img">
             <img src="./assets/images/vision.png" alt="">
+        </div>
+    </div>
+
+    <!-- mission -->
+    <div class="mission">
+        <div class="container">
+            <div class="primary-title centering mb-40">
+                <div class="primary-title-icon">
+                    <img src="./assets/images/arrow-left.png" alt="">
+                </div>
+                <div class="primary-title-text">
+                    SỨ MỆNH
+                </div>
+                <div class="primary-title-icon">
+                    <img src="./assets/images/arrow-right.png" alt="">
+                </div>
+            </div>
+
+            <div class="paragraph">
+                Xây dựng mối quan hệ hợp tác lâu dài với các Đối Tác và Khách Hàng để Cùng Tạo Lập Thịnh Vượng một cách
+                ổn định và bền
+                vững và giúp họ đạt được mục tiêu tài chính của mình.
+            </div>
+
+            <div class="paragraph">
+                Cung cấp “Đầu tư Tập Trung“ với các dự án đầu tư toàn diện một cách hiệu quả để mang lại giá trị lớn
+                nhất, không chỉ gia
+                tăng thịnh vượng cho khách hàng mà còn với tất cả các bên liên quan.
+
+            </div>
+
+            <div class="machine-img">
+                <img src="./assets/images/shakehand.png" alt="">
+            </div>
         </div>
     </div>
 
@@ -506,7 +552,7 @@
                         </div>
                         <div class="footer-social">
                             <div class="footer-social-item centering">
-                                <i class="fa-solid fa-paper-plane"></i>
+                                <i class="fa-brands fa-facebook"></i>
                             </div>
                             <div class="footer-social-item centering">
                                 <i class="fa-solid fa-paper-plane"></i>
