update images english

--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Cormorant+SC:wght@300;400;500;600;700&display=swap"
         rel="stylesheet">
 
-    <link rel="stylesheet" href="./bootstrap.min.css">
-    <link rel="stylesheet" href="./style.css">
-    <link rel="stylesheet" href="./responsive.css">
+    <link rel="stylesheet" href="./assets/css/bootstrap.min.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/responsive.css">
 
     <!-- meta -->
     <meta name="title" content="AMJ ">
@@ -545,18 +545,18 @@
                             beside you to control the future.
                         </div>
                         <div class="footer-social">
-                            <div class="footer-social-item centering">
+                            <a class="footer-social-item centering">
                                 <i class="fa-brands fa-facebook"></i>
-                            </div>
-                            <div class="footer-social-item centering">
+                            </a>
+                            <a class="footer-social-item centering">
                                 <i class="fa-solid fa-paper-plane"></i>
-                            </div>
-                            <div class="footer-social-item centering">
+                            </a>
+                            <a class="footer-social-item centering">
                                 <i class="fa-brands fa-twitter"></i>
-                            </div>
-                            <div class="footer-social-item centering">
+                            </a>
+                            <a class="footer-social-item centering">
                                 <i class="fa-brands fa-youtube"></i>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -571,4 +571,4 @@
 
 </html>
 
-<script src="./main.js"></script>
+<script src="./assets/js/main.js"></script>
