--- a/index.html
+++ b/index.html
@@ -320,8 +320,7 @@
                 <div class="col-md-6 col-12">
                     <div class="service-title">
                         Field
-                        <br>
-                        operations
+                        <br>operations
                     </div>
                 </div>
                 <div class="col-md-6 col-12">
