--- a/index.html
+++ b/index.html
@@ -287,7 +287,7 @@
             </div>
         </div>
         <div class="us-img">
-            <img src="./assets/images/why.png" alt="">
+            <img src="./assets/images/why-2.png" alt="">
         </div>
     </div>
 
@@ -307,8 +307,8 @@
             </div>
 
             <div class="machine-img">
-                <img class="hidden-m" src="./assets/images/machine.png" alt="">
-                <img class="hide-on-pc hidden-tl" src="./assets/images/machine-mobile.png" alt="">
+                <img class="hidden-m" src="./assets/images/machine-2.png" alt="">
+                <img class="hide-on-pc hidden-tl" src="./assets/images/machine-mobile-2.png" alt="">
             </div>
         </div>
     </div>
