done muitls ooadsfjaksdlfhydkljf

--- a/index.html
+++ b/index.html
@@ -83,6 +83,15 @@
                     </div>
                 </div>
             </div>
+            <div class="dropdown">
+                <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton"
+                    data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                    <a href="#">ENG</a>
+                </button>
+                <div class="dropdown-menu" aria-labelledby="dropdownMenuButton">
+                    <a class="dropdown-item" href="/vi.html">VN</a>
+                </div>
+            </div>
         </header>
 
         <div class="intro centering">
@@ -140,28 +149,33 @@
             </li>
             <li class="soft-menu__item soft-menu__item--active">
                 <a href="#intro" data-address="intro" class="header-mobile-logo">
-                    OPEN LETTER
+                    <i class="fa-solid fa-envelope-open"></i>OPEN LETTER
                 </a>
             </li>
             <li class="soft-menu__item soft-menu__item--active">
                 <a href="#about" data-address="about">
-                    ABOUT US
+                    <i class="fa-solid fa-user-group"></i>ABOUT US
                 </a>
             </li>
             <li class="soft-menu__item hehe">
                 <a href="#machine" data-address="machine">
-                    WHY CHOOSE US
+                    <i class="fa-solid fa-layer-group"></i>WHY CHOOSE US
                 </a>
 
                 <!-- sub -->
             <li class="soft-menu__item soft-menu__item-sub">
                 <a href="#service" data-address="service">
-                    FIELD OPERATIONS
+                    <i class="fa-brands fa-servicestack"></i>FIELD OPERATIONS
                 </a>
             </li>
             <li class="soft-menu__item soft-menu__item-sub">
                 <a href="#vision" data-address="vision">
-                    VISION
+                    <i class="fa-solid fa-binoculars"></i>VISION
+                </a>
+            </li>
+            <li class="soft-menu__item soft-menu__item-sub">
+                <a href="/vi.html" data-address="vision">
+                    <i class="fa-solid fa-language"></i>VIETNAMESE
                 </a>
             </li>
         </ul>
